<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/content_main"
        android:background="@drawable/gradient_background" />

    <Button
        android:id="@+id/firstctgr"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:alpha="0.9"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/firstctgr"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/secondctgr"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="280dp"
        android:alpha="0.8"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/secondctgr"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/thirdctgr"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/round_button"
        android:alpha="0.8"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/thirdctgr"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fourthctgr"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/round_button"
        android:alpha="0.8"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/fourthctgr"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/addbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/round_button"
        android:alpha="0.8"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/add_recipe"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>